# meta-analitica

./: .gitignore  CLAUDE.md  README.md  app.py  main.py  pyproject.toml
.streamlit/: config.toml
core_agent/: prompt_nuevo_domino
core_agent/skills/: chart_builder.py  duckdb_client.py  okf_visualizer.py  report_builder.py
core_agent/tasks/: crear_etl.md  crear_reporte.md  validar_calidad.md
memoria/: index.md  log.md
memoria/clientes/: cliente_demo.md
memoria/metricas/: campanas.md  devoluciones.md  envios.md  inventario.md  ventas.md
pipelines/: calidad.py  etl_campanas.py  etl_devoluciones.py  etl_envios.py  etl_inventario.py  etl_ventas.py
reports/: campanas.py  devoluciones.py  envios.py  inventario.py  ventas.py
